# global-permission

./: README.ja.md  README.md  install.sh  pyproject.toml
scripts/: __init__.py
skills/global-permission/: SKILL.md
src/gperm/: __init__.py  __main__.py  cli.py  config.py  formats.py  i18n.py  importers.py  model.py  operations.py  sample.py  util.py
src/gperm/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py  copilot.py  gemini.py  opencode.py
tests/: test_adapters.py  test_cli.py  test_config.py  test_release.py
