[project]
name = "global-permission"
version = "0.0.3"
description = "Unified permission sync and enforcement for AI coding agent CLIs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "json5>=0.12.0",
  "rich>=14.0.0",
  "tomlkit>=0.13.3",
  "typer>=0.16.1",
]

[project.scripts]
gperm = "gperm.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gperm"]
